--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,8 +1,23 @@
-<h2>Products</h2>
-
-
-<!-- 
-Copyright Google LLC. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at https://angular.io/license
--->
+<section class="container">
+<div class="row">
+  <div class="col-sm-6">
+    <p>kitchen</p>
+    <img src="https://content.codecademy.com/projects/make-a-website/lesson-4/kitchen.jpg">
+  </div>
+  <div class="col-sm-6">
+    <p>woodwork</p>
+    <img src="https://content.codecademy.com/projects/make-a-website/lesson-4/woodwork.jpg">
+  </div>
+  <div class="col-sm-6">
+    <p>gifts</p>
+    <img src="https://content.codecademy.com/projects/make-a-website/lesson-4/gifts.jpg">
+  </div>
+  <div class="col-sm-6">
+    <p>antiques</p>
+    <img src="https://content.codecademy.com/projects/make-a-website/lesson-4/antique.jpg">
+  </div>
+</div>
+<div class="row text-center">
+  <a class="btn btn-secondary" href="#">View Complete Catalogue</a>
+</div>
+</section>
