--- a/src/app/videos/videos.component.html
+++ b/src/app/videos/videos.component.html
@@ -3,19 +3,19 @@
 <div class="row">
     <div class="col-sm-6">
         <p>Video Title 1</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_1" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bgPuPSPZe2U?si=sdmy-9QZmWXS19g6" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="col-sm-6">
         <p>Video Title 2</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bgPuPSPZe2U?si=sdmy-9QZmWXS19g6" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="col-sm-6">
         <p>Video Title 3</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_3" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bgPuPSPZe2U?si=sdmy-9QZmWXS19g6" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="col-sm-6">
         <p>Video Title 4</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_4" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bgPuPSPZe2U?si=sdmy-9QZmWXS19g6" frameborder="0" allowfullscreen></iframe>
     </div>
 </div>
 <div class="row text-center">
